kuber-homeworks/1-5/configs/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: netology-5
  labels:
    app: back
spec:
  selector:
    matchLabels:
      app: back
  replicas: 1
  template:
    metadata:
      labels:
        app: back
        component: nettask5
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
