kuber-homeworks/1-5/configs/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: netology-5
  labels:
    app: front
spec:
  selector:
    matchLabels:
      app: front
  replicas: 3
  template:
    metadata:
      labels:
        app: front
        component: nettask5
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.0
          ports:
            - containerPort: 80
